HOTFIX: Fixed code font weight and added focus outline on Firefox

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -27,6 +27,10 @@ a {
 	&:hover {
 		color: $active-color;
 	}
+
+	&:focus {
+		outline: 2px solid $active-color;
+	}
 }
 
 // Inline Code
