--- a/src/sass/common/_prism-overrides.scss
+++ b/src/sass/common/_prism-overrides.scss
@@ -26,7 +26,7 @@ $btn-size: calc((#{$code-block-font-size} * 3.5) - (2 * #{$btn-offset}));
 }
 
 code {
-	font-weight: 700;
+	font-weight: 500;
 }
 
 code.language-bash::before {
