--- a/src/sass/components/_sidebar.scss
+++ b/src/sass/components/_sidebar.scss
@@ -66,6 +66,10 @@
 			color: #fff;
 		}
 
+		&:focus {
+			outline: 2px solid #fff;
+		}
+
 		&:hover {
 			color: map-get($pot-grey, 2);
 		}
